--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
     }
   ],
   "require": {
-    "php": ">=5.6.0"
+    "php": ">=5.6.0",
+	"nette/application": "^2.4",
+	"nette/di": "^2.4",
+	"nette/http": "^2.4"
   },
   "autoload": {
     "classmap": ["src/"]
